--- a/index.html
+++ b/index.html
@@ -7,12 +7,6 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <!-- Favicons -->
-  <link rel="shortcut icon" href="favicon.png">
-  <link rel="apple-touch-icon" href="apple-touch-icon.png">
-  <link rel="apple-touch-icon" sizes="72x72" href="apple-touch-icon-72x72.png">
-  <link rel="apple-touch-icon" sizes="114x114" href="apple-touch-icon-114x114.png">
-
   <title>Portfolio</title>
 
   <!-- Styles -->
@@ -66,7 +60,6 @@
           <a href="https://www.instagram.com/mansoori_yasir786/?next=%2Freel%2FCvMYGEOIdDU%2F" target="_blank"
             class="icon ion-social-instagram"></a>
         </div>
-        <div class="copy">© Ramsay 2019. All Rights Reseverd</div>
       </div>
     </div>
 
@@ -74,8 +67,8 @@
 
     <header class="navbar navbar-fullpage boxed">
       <div class="navbar-bg"></div>
-      <a class="brand" href="#">
-        <img alt="" src="assets/logoo.png" style="margin-right: 0px;">
+      <a class="brand" href="index.html">
+        <img alt="" src="assets/inuse/logoo.png" style="margin-right: 0px;">
         <div class="brand-info">
           <div class="brand-name backinleft1" style="font-size: 14px;">Yasir</div>
           <div class="brand-name animate__animated animate__backInLeft " style="font-size: 16px; ">Mansoori</div>
@@ -102,19 +95,12 @@
       </div>
     </header>
 
-    <!-- <div class="copy-bottom white boxed">© Ramsay 2019.</div>
-    <div class="social-list social-list-bottom boxed">
-      <a href="" class="icon ion-social-linkedin"></a>
-      <a href="" class="icon ion-social-facebook"></a>
-      <a href="" class="icon ion-social-googleplus"></a>
-      <a href="" class="icon ion-social-dribbble-outline"></a>
-    </div> -->
 
     <div class="pagepiling">
       <!-- hero section -->
       <div data-anchor="page1" class="pp-scrollable text-white section section-1">
         <div class="scroll-wrap">
-          <div class="section-bg" style="background-image:url(assets/fdg.jpg);"></div>
+          <div class="section-bg" style="background-image:url(assets/inuse/fdg.jpg);"></div>
           <div class="scrollable-content">
             <div class="vertical-centred">
               <div class="boxed boxed-inner">
@@ -258,7 +244,7 @@
       <!-- Education -->
       <div data-anchor="page3" class="pp-scrollable text-white section section-3">
         <div class="scroll-wrap">
-          <div class="section-bg mask" style="background-image:url(assets/IMG_0446.jpg);"></div>
+          <div class="section-bg mask" style="background-image:url(assets/inuse/IMG_0446.jpg);"></div>
           <div class="scrollable-content">
             <div class="vertical-title d-none d-lg-block"><span>resume</span></div>
             <div class="vertical-centred">
@@ -341,7 +327,7 @@
 
       <div data-anchor="page4" class="pp-scrollable section section-4">
         <div class="scroll-wrap">
-          <div class="section-bg bg-about" style="background-image:url(assets/grey.jpg);"></div>
+          <div class="section-bg bg-about" style="background-image:url(assets/inuse/grey.jpg);"></div>
           <div class="scrollable-content">
             <div class="vertical-title text-white  d-none d-lg-block"><span>about me</span></div>
             <div class="vertical-centred">
@@ -353,7 +339,7 @@
                         <div class="col-lg-6 offset-xl-1">
                           <div class="experience-box" style="width: 400px;">
                             <div class="experience-content">
-                              <img src="assets/photo.jpeg" class="img-fluid" alt="">
+                              <img src="assets/inuse/photo.jpeg" class="img-fluid" alt="">
                               <!-- <div class="experience-number">4</div> -->
                               <!-- <div class="experience-info">
                                 <div>Years<br>Experience<br>Working</div>
@@ -432,7 +418,7 @@
       <div data-anchor="page5" class="pp-scrollable text-white section section-5">
         <div class="scroll-wrap">
           <div class="bg-changer">
-            <div class="section-bg" style="background-image:url(assets/computer.jpg);"></div>
+            <div class="section-bg" style="background-image:url(assets/inuse/computer.jpg);"></div>
           </div>
           <div class="scrollable-content">
             <div class="vertical-title  d-none d-lg-block"><span>my works</span></div>
@@ -451,7 +437,6 @@
                               <div class="project-category">Website.</div>
                             </a>
                           </div>
-
                           <!-- <div class="view-all view-all-projects">
                             <a href="projects.html">
                               View all projects
@@ -467,10 +452,10 @@
           </div>
         </div>
       </div>
-    
+
       <div data-anchor="page8" class="pp-scrollable section section-8">
         <div class="scroll-wrap">
-          <div class="section-bg" style="background-image:url(assets/grey.jpg);"></div>
+          <div class="section-bg" style="background-image:url(assets/inuse/grey.jpg);"></div>
           <div class="scrollable-content">
             <div class="vertical-title text-white d-none d-lg-block"><span>contact</span></div>
             <div class="vertical-centred">
@@ -483,7 +468,7 @@
                           <h2 class="title"><span class="text-primary">Rajasthan</span>, India</h2>
                           <h5 class="text-muted">Kota, Rajasthan</h5>
                           <section class="contact-address">
-                            <h3><a class="mail" href="mailto:contact@ramsay.com"> yasir.mansoori000@gmail.com</a></h3>
+                            <h3><a class="mail" href="mailto:yasir.mansoori000@gmail.com"> yasir.mansoori000@gmail.com</a></h3>
                             <h3><span class="phone">+91 7976523913</span></h3>
                           </section>
                         </div>
@@ -503,11 +488,6 @@
                                 </div>
                                 <div class="form-group col-sm-12">
                                   <textarea name="message" required="" placeholder="Message*"></textarea>
-                                </div>
-                                <div class="form-group form-group-message col-sm-12">
-                                  <span id="success" class="text-primary">Thank You, your message is successfully
-                                    sent!</span>
-                                  <span id="error" class="text-primary">Sorry, something went wrong </span>
                                 </div>
                                 <div class="col-sm-12"><button type="submit" class="btn">Contact me</button></div>
                               </div>
