--- a/project-detail.html
+++ b/project-detail.html
@@ -7,12 +7,6 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <!-- Favicons -->
-  <link rel="shortcut icon" href="favicon.png">
-  <link rel="apple-touch-icon" href="apple-touch-icon.png">
-  <link rel="apple-touch-icon" sizes="72x72" href="apple-touch-icon-72x72.png">
-  <link rel="apple-touch-icon" sizes="114x114" href="apple-touch-icon-114x114.png">
-
   <title>Portfolio</title>
 
   <!-- Styles -->
@@ -64,7 +58,6 @@
           <a href="https://www.instagram.com/mansoori_yasir786/?next=%2Freel%2FCvMYGEOIdDU%2F" target="_blank"
             class="icon ion-social-instagram"></a>
         </div>
-        <div class="copy">© Ramsay 2019. All Rights Reseverd</div>
       </div>
     </div>
 
@@ -73,7 +66,7 @@
     <header class="navbar navbar-fullpage boxed">
       <div class="navbar-bg"></div>
       <a class="brand" href="index.html">
-        <img alt="" src="assets/logoo.png" style="margin-right: 0px;">
+        <img alt="" src="assets/inuse/logoo.png" style="margin-right: 0px;">
         <div class="brand-info">
           <div class="brand-name backinleft1" style="font-size: 14px;">Yasir</div>
           <div class="brand-name animate__animated animate__backInLeft " style="font-size: 16px; ">Mansoori</div>
@@ -137,7 +130,6 @@
           </div>
         </div>
       </div>
-      <!-- <img alt="" class="image-holder wow fadeIn" src="images/bg/project3.jpg"> -->
       <div class="container" style="margin-bottom: 25px;">
         <p class="project-detail-text text-center">
           The educational platform has been developed using the Bootstrap front-end programming platform, ensuring a
@@ -148,8 +140,8 @@
           <a href="https://yasirmansoori.github.io/SRMLP/" target="_blank"
             class="underline">https://yasirmansoori.github.io/SRMLP/</a>
         </p>
-        <img alt="" class="image-holder wow fadeInLeft" src="assets/features.jpg">
-        <img alt="" class="image-holder wow fadeInRight" src="assets/services.jpg">
+        <img alt="" class="image-holder wow fadeInLeft" src="assets/inuse/features.jpg">
+        <img alt="" class="image-holder wow fadeInRight" src="assets/inuse/services.jpg">
       </div>
     </div>
   </div>
