--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           /
         </div>
         <div class="contact-item">
-          <a href="mailto:contact@Ramsay.com">yasir.mansoori000@gmail.com</a>
+          <a href="mailto:yasir.mansoori000@gmail.com">yasir.mansoori000@gmail.com</a>
         </div>
       </div>
     </header>
@@ -468,7 +468,8 @@
                           <h2 class="title"><span class="text-primary">Rajasthan</span>, India</h2>
                           <h5 class="text-muted">Kota, Rajasthan</h5>
                           <section class="contact-address">
-                            <h3><a class="mail" href="mailto:yasir.mansoori000@gmail.com"> yasir.mansoori000@gmail.com</a></h3>
+                            <h3><a class="mail" href="mailto:yasir.mansoori000@gmail.com">
+                                yasir.mansoori000@gmail.com</a></h3>
                             <h3><span class="phone">+91 7976523913</span></h3>
                           </section>
                         </div>
