--- a/project-detail.html
+++ b/project-detail.html
@@ -88,7 +88,7 @@
           /
         </div>
         <div class="contact-item">
-          <a href="mailto:contact@Ramsay.com">yasir.mansoori000@gmail.com</a>
+          <a href="mailto:yasir.mansoori000@gmail.com">yasir.mansoori000@gmail.com</a>
         </div>
       </div>
     </header>
