--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
 
     <div class="pagepiling">
-      <!-- hero section -->
+      <!-- Main section -->
       <div data-anchor="page1" class="pp-scrollable text-white section section-1">
         <div class="scroll-wrap">
           <div class="section-bg" style="background-image:url(assets/inuse/fdg.jpg);"></div>
@@ -207,15 +207,18 @@
                       <div class="row-specialization row">
                         <div class="col-specialization col-md-6 col-lg-4">
                           <span class="icon-specialization icon-laptop"></span>
-                          <h4 class="text-uppercase">Web DEVELOPER</h4>
-                          <p>As a fresher web developer, I am enthusiastic about creating engaging and user-friendly web
-                            experiences. With a solid foundation in HTML, CSS, and JavaScript, I am eager to contribute
+                          <h4 class="text-uppercase">Full Stack Web DEVELOPER</h4>
+                          <p>As a fresher Full Stack web developer, I am enthusiastic about creating engaging and
+                            user-friendly web
+                            experiences. With a solid foundation in HTML, CSS, and JavaScript, with proficiency in MERN
+                            stack I am eager to contribute
                             my skills to designing and building visually appealing and responsive websites.</p>
                         </div>
                         <div class="col-specialization col-md-6 col-lg-4">
                           <span class="icon-specialization icon-smartphone-embed"></span>
                           <h4 class="text-uppercase">Coding</h4>
-                          <p>As a programmer proficient in both C/C++ and Python, I possess a strong foundation in
+                          <p>As a programmer I'm proficient in both C/C++, Python and Javascript , I possess a strong
+                            foundation in
                             software development and a diverse skill set that enables me to create efficient and robust
                             applications. </p>
                         </div>
@@ -253,7 +256,6 @@
                   <div class="container">
                     <div class="intro">
                       <div class="row row-resume">
-
                         <div class="col-md-6 fadeY fadeY-1">
                           <h2 class="resume-header title">Education</h2>
                           <div class="col-resume">
@@ -280,7 +282,6 @@
                             </div>
                           </div>
                         </div>
-
                         <div class="col-md-6 pt-md-5 mt-md-5 fadeY fadeY-2">
                           <h2 class="resume-header title">Experience</h2>
                           <div class="col-resume">
@@ -325,6 +326,7 @@
         </div>
       </div>
 
+      <!-- About ME -->
       <div data-anchor="page4" class="pp-scrollable section section-4">
         <div class="scroll-wrap">
           <div class="section-bg bg-about" style="background-image:url(assets/inuse/grey.jpg);"></div>
@@ -353,21 +355,21 @@
                           <div class="progress-bars" style="margin-top: 5px;">
                             <div class="clearfix">
                               <div class="number float-left" style="margin-bottom: 2px;">HTML, CSS and JS</div>
-                              <div class="number float-right" style="margin-bottom: 2px;">90%</div>
+                              <div class="number float-right" style="margin-bottom: 2px;">95%</div>
                             </div>
                             <div class="progress" style="height: 20px; margin-bottom: 2px;">
                               <div class="progress-bar-wrp">
-                                <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="0"
+                                <div class="progress-bar" role="progressbar" style="width: 95%" aria-valuenow="0"
                                   aria-valuemin="0" aria-valuemax="100"></div>
                               </div>
                             </div>
                             <div class="clearfix">
                               <div class="number float-left" style="margin-bottom: 2px;">Wordpress & Bootstrap</div>
-                              <div class="number float-right" style="margin-bottom: 2px;">80%</div>
+                              <div class="number float-right" style="margin-bottom: 2px;">95%</div>
                             </div>
                             <div class="progress" style="height: 20px; margin-bottom: 2px;">
                               <div class="progress-bar-wrp">
-                                <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="0"
+                                <div class="progress-bar" role="progressbar" style="width: 95%" aria-valuenow="0"
                                   aria-valuemin="0" aria-valuemax="100"></div>
                               </div>
                             </div>
@@ -384,21 +386,21 @@
                             </div>
                             <div class="clearfix">
                               <div class="number float-left" style="margin-bottom: 2px;">C/C++</div>
-                              <div class="number float-right" style="margin-bottom: 2px;">85%</div>
+                              <div class="number float-right" style="margin-bottom: 2px;">90%</div>
                             </div>
                             <div class="progress" style="height: 20px; margin-bottom: 2px;">
                               <div class="progress-bar-wrp">
-                                <div class="progress-bar" role="progressbar" style="width: 85%" aria-valuenow="0"
+                                <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="0"
                                   aria-valuemin="0" aria-valuemax="100"></div>
                               </div>
                             </div>
                             <div class="clearfix">
                               <div class="number float-left" style="margin-bottom: 2px;">Python</div>
-                              <div class="number float-right" style="margin-bottom: 2px;">80%</div>
+                              <div class="number float-right" style="margin-bottom: 2px;">90%</div>
                             </div>
                             <div class="progress" style="height: 20px; margin-bottom: 2px;">
                               <div class="progress-bar-wrp">
-                                <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="0"
+                                <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="0"
                                   aria-valuemin="0" aria-valuemax="100"></div>
                               </div>
                             </div>
@@ -415,10 +417,13 @@
         </div>
       </div>
 
+      <!-- Projects -->
       <div data-anchor="page5" class="pp-scrollable text-white section section-5">
         <div class="scroll-wrap">
           <div class="bg-changer">
-            <div class="section-bg" style="background-image:url(assets/inuse/computer.jpg);"></div>
+            <div class="section-bg" style="background-image:url(assets/inuse/grey.jpg);"></div>
+            <div class="section-bg" style="background-image:url(assets/inuse/grey.jpg);"></div>
+            <div class="section-bg" style="background-image:url(assets/inuse/grey.jpg);"></div>
           </div>
           <div class="scrollable-content">
             <div class="vertical-title  d-none d-lg-block"><span>my works</span></div>
@@ -431,12 +436,29 @@
                         <div class="col-md-12">
 
                           <div class="project-row">
-                            <a class="active" href="project-detail.html">
+                            <a class="active" href="project1.html">
                               <span class="project-number">01</span>
+                              <h2 class="project-title">QR Code Generator.</h2>
+                              <div class="project-category">Website.</div>
+                            </a>
+                          </div>
+
+                          <div class="project-row">
+                            <a href="project2.html">
+                              <span class="project-number">02</span>
+                              <h2 class="project-title">Word Utility.</h2>
+                              <div class="project-category">Website.</div>
+                            </a>
+                          </div>
+
+                          <div class="project-row">
+                            <a href="project3.html">
+                              <span class="project-number">03</span>
                               <h2 class="project-title">SRMLP.</h2>
                               <div class="project-category">Website.</div>
                             </a>
                           </div>
+
                           <!-- <div class="view-all view-all-projects">
                             <a href="projects.html">
                               View all projects
