updated with express and node js

--- a/public/index.html
+++ b/public/index.html
@@ -67,8 +67,8 @@
 
     <header class="navbar navbar-fullpage boxed">
       <div class="navbar-bg"></div>
-      <a class="brand" href="index.html">
-        <img alt="" src="assets/inuse/logoo.png" style="margin-right: 0px;">
+      <a class="brand" href="/">
+        <img alt="" src="assets/inuse/YM.png" style="margin-right: 0px;">
         <div class="brand-info">
           <div class="brand-name backinleft1" style="font-size: 14px;">Yasir</div>
           <div class="brand-name animate__animated animate__backInLeft " style="font-size: 16px; ">Mansoori</div>
