--- a/public/project1.html
+++ b/public/project1.html
@@ -7,7 +7,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Portfolio</title>
+  <title>Qr Code Generator</title>
 
   <!-- Styles -->
   <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700&display=swap" rel="stylesheet">
@@ -66,7 +66,7 @@
     <header class="navbar navbar-fullpage boxed">
       <div class="navbar-bg"></div>
       <a class="brand" href="index.html">
-        <img alt="" src="assets/inuse/logoo.png" style="margin-right: 0px;">
+        <img alt="" src="assets/inuse/YM.png" style="margin-right: 0px;">
         <div class="brand-info">
           <div class="brand-name backinleft1" style="font-size: 14px;">Yasir</div>
           <div class="brand-name animate__animated animate__backInLeft " style="font-size: 16px; ">Mansoori</div>
@@ -97,11 +97,12 @@
       <div class="container">
         <div class="row row-project">
           <div class="col-project-name col-md-6  mt-5 mb-5 mb-md-0">
-            <h1>SRM Learn-Portal </h1>
+            <h1>Qr Code Generator </h1>
+
             <div class="social-list social-list-detail">
               <a href="https://www.linkedin.com/in/yasir-mansoori/" target="_blank"
                 class="icon ion-social-linkedin"></a>
-              <a href="https://github.com/yasirmansoori" target="_blank" class="icon ion-social-github"></a>
+              <a href="https://github.com/yasirmansoori/QR-generator" target="_blank" class="icon ion-social-github"></a>
               <a href="https://www.instagram.com/mansoori_yasir786/?next=%2Freel%2FCvMYGEOIdDU%2F" target="_blank"
                 class="icon ion-social-instagram"></a>
             </div>
@@ -110,21 +111,22 @@
             <div class="row">
               <div class="col-md-6 mt-5">
                 <h5>Client</h5>
-                <p>SRM Students</p>
+                <p>Public</p>
               </div>
               <div class="col-md-6 mt-5">
                 <h5>Team</h5>
                 <p>Yasir Mansoori<br>
-                  Developer
+                  (Developer)
                 </p>
               </div>
               <div class="col-md-6 mt-5">
                 <h5>Services</h5>
-                <p>GPA/SGPA calculator, previous year papers, Dedicated notes</p>
+                <p>Customized QR codes for various types of URLs, such as websites, social media profiles,
+                  or any link users provide</p>
               </div>
               <div class="col-md-6 mt-5">
-                <h5>Date</h5>
-                <p>January, 2022</p>
+                <h5>Start Date</h5>
+                <p>June, 2023 - Present</p>
               </div>
             </div>
           </div>
@@ -132,16 +134,15 @@
       </div>
       <div class="container" style="margin-bottom: 25px;">
         <p class="project-detail-text text-center">
-          The educational platform has been developed using the Bootstrap front-end programming platform, ensuring a
-          user-friendly and responsive interface. One of its standout features is a GPA/SGPA calculator, aiding students
-          in accurately determining their academic performance. The platform also offers a valuable resource by
-          providing access to previous year papers, enabling students to enhance their exam preparation. The website's
-          underlying structure is coded using HTML, CSS, and JS, ensuring a seamless and dynamic user experience.
-          <a href="https://yasirmansoori.github.io/SRMLP/" target="_blank"
-            class="underline">https://yasirmansoori.github.io/SRMLP/</a>
+          A QR Code Generator has been created using a blend of technologies, including ReactJS, HTML, Bootstrap-CSS,
+          and JavaScript. This tool aims to improve accessibility and usability. It streamlines the generation of
+          personalized QR codes for different URL types (websites, social media profiles, etc.), eliminating the
+          requirement for external applications. Users can easily share the generated QR codes digitally or in physical
+          form, offering versatility for a range of applications and purposes.
+          <a href="https://qr-code-generetor.netlify.app/" target="_blank"
+            class="underline">https://qr-code-generetor.netlify.app/</a>
         </p>
-        <img alt="" class="image-holder wow fadeInLeft" src="assets/inuse/features.jpg">
-        <img alt="" class="image-holder wow fadeInRight" src="assets/inuse/services.jpg">
+        <img alt="" class="image-holder wow fadeInLeft" src="assets/inuse/Project1.png">
       </div>
     </div>
   </div>
