--- a/public/project2.html
+++ b/public/project2.html
@@ -7,7 +7,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Qr Code Generator</title>
+  <title>Word Utility</title>
 
   <!-- Styles -->
   <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700&display=swap" rel="stylesheet">
@@ -66,7 +66,7 @@
     <header class="navbar navbar-fullpage boxed">
       <div class="navbar-bg"></div>
       <a class="brand" href="index.html">
-        <img alt="" src="assets/inuse/logoo.png" style="margin-right: 0px;">
+        <img alt="" src="assets/inuse/YM.png" style="margin-right: 0px;">
         <div class="brand-info">
           <div class="brand-name backinleft1" style="font-size: 14px;">Yasir</div>
           <div class="brand-name animate__animated animate__backInLeft " style="font-size: 16px; ">Mansoori</div>
@@ -97,12 +97,12 @@
       <div class="container">
         <div class="row row-project">
           <div class="col-project-name col-md-6  mt-5 mb-5 mb-md-0">
-            <h1>Qr Code Generator </h1>
-
+            <h1>Word Utility</h1>
             <div class="social-list social-list-detail">
               <a href="https://www.linkedin.com/in/yasir-mansoori/" target="_blank"
                 class="icon ion-social-linkedin"></a>
-              <a href="https://github.com/yasirmansoori/QR-generator" target="_blank" class="icon ion-social-github"></a>
+              <a href="https://github.com/yasirmansoori/Word-Utility" target="_blank"
+                class="icon ion-social-github"></a>
               <a href="https://www.instagram.com/mansoori_yasir786/?next=%2Freel%2FCvMYGEOIdDU%2F" target="_blank"
                 class="icon ion-social-instagram"></a>
             </div>
@@ -121,12 +121,13 @@
               </div>
               <div class="col-md-6 mt-5">
                 <h5>Services</h5>
-                <p>Customized QR codes for various types of URLs, such as websites, social media profiles,
-                  or any link users provide</p>
+                <p>Features include multilingual translation, sentence case conversion, word find and replace within
+                  paragraphs, text wiping, and
+                  undo/redo capabilities.</p>
               </div>
               <div class="col-md-6 mt-5">
-                <h5>Start Date</h5>
-                <p>June, 2023 - Present</p>
+                <h5>Date</h5>
+                <p>May'23 - Present</p>
               </div>
             </div>
           </div>
@@ -134,15 +135,14 @@
       </div>
       <div class="container" style="margin-bottom: 25px;">
         <p class="project-detail-text text-center">
-          A QR Code Generator has been created using a blend of technologies, including ReactJS, HTML, Bootstrap-CSS,
-          and JavaScript. This tool aims to improve accessibility and usability. It streamlines the generation of
-          personalized QR codes for different URL types (websites, social media profiles, etc.), eliminating the
-          requirement for external applications. Users can easily share the generated QR codes digitally or in physical
-          form, offering versatility for a range of applications and purposes.
-          <a href="https://qr-code-generetor.netlify.app/" target="_blank"
-            class="underline">https://qr-code-generetor.netlify.app/</a>
+          developed a website using a tech stack that includes ReactJS, HTML, Bootstrap-CSS, and JavaScript, along with
+          API integration. The website offers a robust and user-friendly platform for various text-related tasks. Key
+          features include multilingual translation, sentence case conversion, word find and replace within paragraphs,
+          text wiping, and undo/redo capabilities. In addition to basic text editing, the site provides tools for
+          estimating reading and speaking times, enhancing its utility for users dealing with textual content.
+          <a href="https://word-util.netlify.app/" target="_blank" class="underline">https://word-util.netlify.app/</a>
         </p>
-        <img alt="" class="image-holder wow fadeInLeft" src="assets/inuse/Project1.png">
+        <!-- <img alt="" class="image-holder wow fadeInRight" src="assets/inuse/services.jpg"> -->
       </div>
     </div>
   </div>
