--- a/public/project3.html
+++ b/public/project3.html
@@ -7,7 +7,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Word Utility</title>
+  <title>Portfolio</title>
 
   <!-- Styles -->
   <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700&display=swap" rel="stylesheet">
@@ -66,7 +66,7 @@
     <header class="navbar navbar-fullpage boxed">
       <div class="navbar-bg"></div>
       <a class="brand" href="index.html">
-        <img alt="" src="assets/inuse/logoo.png" style="margin-right: 0px;">
+        <img alt="" src="assets/inuse/YM.png" style="margin-right: 0px;">
         <div class="brand-info">
           <div class="brand-name backinleft1" style="font-size: 14px;">Yasir</div>
           <div class="brand-name animate__animated animate__backInLeft " style="font-size: 16px; ">Mansoori</div>
@@ -97,12 +97,11 @@
       <div class="container">
         <div class="row row-project">
           <div class="col-project-name col-md-6  mt-5 mb-5 mb-md-0">
-            <h1>Word Utility</h1>
+            <h1>SRM Learn-Portal </h1>
             <div class="social-list social-list-detail">
               <a href="https://www.linkedin.com/in/yasir-mansoori/" target="_blank"
                 class="icon ion-social-linkedin"></a>
-              <a href="https://github.com/yasirmansoori/Word-Utility" target="_blank"
-                class="icon ion-social-github"></a>
+              <a href="https://github.com/yasirmansoori" target="_blank" class="icon ion-social-github"></a>
               <a href="https://www.instagram.com/mansoori_yasir786/?next=%2Freel%2FCvMYGEOIdDU%2F" target="_blank"
                 class="icon ion-social-instagram"></a>
             </div>
@@ -111,23 +110,21 @@
             <div class="row">
               <div class="col-md-6 mt-5">
                 <h5>Client</h5>
-                <p>Public</p>
+                <p>SRM Students</p>
               </div>
               <div class="col-md-6 mt-5">
                 <h5>Team</h5>
                 <p>Yasir Mansoori<br>
-                  (Developer)
+                  Developer
                 </p>
               </div>
               <div class="col-md-6 mt-5">
                 <h5>Services</h5>
-                <p>Features include multilingual translation, sentence case conversion, word find and replace within
-                  paragraphs, text wiping, and
-                  undo/redo capabilities.</p>
+                <p>GPA/SGPA calculator, previous year papers, Dedicated notes</p>
               </div>
               <div class="col-md-6 mt-5">
                 <h5>Date</h5>
-                <p>May'23 - Present</p>
+                <p>January, 2022</p>
               </div>
             </div>
           </div>
@@ -135,14 +132,16 @@
       </div>
       <div class="container" style="margin-bottom: 25px;">
         <p class="project-detail-text text-center">
-          developed a website using a tech stack that includes ReactJS, HTML, Bootstrap-CSS, and JavaScript, along with
-          API integration. The website offers a robust and user-friendly platform for various text-related tasks. Key
-          features include multilingual translation, sentence case conversion, word find and replace within paragraphs,
-          text wiping, and undo/redo capabilities. In addition to basic text editing, the site provides tools for
-          estimating reading and speaking times, enhancing its utility for users dealing with textual content.
-          <a href="https://word-util.netlify.app/" target="_blank" class="underline">https://word-util.netlify.app/</a>
+          The educational platform has been developed using the Bootstrap front-end programming platform, ensuring a
+          user-friendly and responsive interface. One of its standout features is a GPA/SGPA calculator, aiding students
+          in accurately determining their academic performance. The platform also offers a valuable resource by
+          providing access to previous year papers, enabling students to enhance their exam preparation. The website's
+          underlying structure is coded using HTML, CSS, and JS, ensuring a seamless and dynamic user experience.
+          <a href="https://yasirmansoori.github.io/SRMLP/" target="_blank"
+            class="underline">https://yasirmansoori.github.io/SRMLP/</a>
         </p>
-        <!-- <img alt="" class="image-holder wow fadeInRight" src="assets/inuse/services.jpg"> -->
+        <img alt="" class="image-holder wow fadeInLeft" src="assets/inuse/features.jpg">
+        <img alt="" class="image-holder wow fadeInRight" src="assets/inuse/services.jpg">
       </div>
     </div>
   </div>
